make sure manual dscs are never deleted